Fixing scrollbar shifting slightly

--- a/popup/tabfind.css
+++ b/popup/tabfind.css
@@ -53,7 +53,7 @@ html, body {
 
 #tabs-list {
 	width: 100%;
-	height: 490px;
+	height: 493px;
 	overflow-y: auto;
 	padding: 0;
 	margin: 0;
